--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,14 @@
 aiohttp==3.5.4
+appdirs==1.4.3
 astroid==2.2.5
 async-timeout==3.0.1
 attrs==19.1.0
+black==19.3b0
 CacheControl==0.12.5
 cachetools==3.1.1
 certifi==2019.6.16
 chardet==3.0.4
+Click==7.0
 colorama==0.4.1
 discord.py==1.2.3
 firebase-admin==2.17.0
@@ -30,10 +33,12 @@ protobuf==3.9.0
 pyasn1==0.4.6
 pyasn1-modules==0.2.6
 pylint==2.3.1
+python-dotenv==0.10.3
 pytz==2019.2
 requests==2.22.0
 rsa==4.0
 six==1.12.0
+toml==0.10.0
 typed-ast==1.4.0
 uritemplate==3.0.0
 urllib3==1.25.3
