Adding support for Heroku

--- a/example.env
+++ b/example.env
@@ -1,2 +1,5 @@
 # Add your token here below
 TOKEN=""
+
+# To use firebase creds from env you might want to uncomment the next line
+# FIREBASE_CREDS=""
